Minor updates; added projects page;

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
-<footer>
-  <p class="w3-text-orange">Copyright &copy; {{getCurrentYear}} {{publisher}}</p>
+<footer class="w3-bottom">
+  <p class="w3-text-orange">Copyright &copy; {{getCurrentYear}} NewUp Developments</p>
 </footer>
