--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -1,4 +1,5 @@
 <div class="w3-bar w3-blue">
   <a href="/" class="w3-bar-item w3-button w3-mobile">Home</a>
   <a href="/about" class="w3-bar-item w3-button w3-mobile">About</a>
+  <a href="/projects" class="w3-bar-item w3-button w3-mobile">Projects</a>
 </div>
